# BackTesting_Simulation

./: CMakeLists.txt  README.md
include/: constants.h  constants.hpp  memory_map.h  simulator.h  token_map.h  utils.h
src/: main.cpp  memory_map.cpp  memorymap.cpp  memorymap.h  mmap_reader.cpp  simulation.cpp  simulator.cpp  token_map.cpp  tokenmap.cpp  utils.cpp
